@@ -1,5 +1,5 @@
 /* Reverse Engineer's Hex Editor
- * Copyright (C) 2020-2021 Daniel Collins <solemnwarning@solemnwarning.net>
+ * Copyright (C) 2020-2022 Daniel Collins <solemnwarning@solemnwarning.net>
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 as published by
@@ -145,7 +145,7 @@ namespace REHex {
 			
 			ByteRangeSet offsets_pending;    /**< Bytes which need to be processed (relative to Range base). */
 			ByteRangeSet offsets_different;  /**< Bytes which have been processed and have differences (relative to Range base). */
-			wxTimer *update_regions_timer;
+			wxTimer update_regions_timer;
 			
 			off_t relative_cursor_pos;  /**< Current cursor position (relative to Range base). */
 			off_t longest_range;        /**< Length of the longest Range. */
