@@ -1,5 +1,5 @@
 /* Reverse Engineer's Hex Editor
- * Copyright (C) 2021 Daniel Collins <solemnwarning@solemnwarning.net>
+ * Copyright (C) 2021-2022 Daniel Collins <solemnwarning@solemnwarning.net>
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 as published by
@@ -49,14 +49,13 @@ class ConsoleBufferTest: public ::testing::Test
 		std::vector<std::string> events;
 		
 		wxFrame frame;
-		wxTimer *timer;
+		wxTimer timer;
 		
 		ConsoleBufferTest():
 			cbuffer(64),
-			frame(NULL, wxID_ANY, "REHex Tests")
+			frame(NULL, wxID_ANY, "REHex Tests"),
+			timer(&frame, wxID_ANY)
 		{
-			timer = new wxTimer(&frame, wxID_ANY);
-			
 			frame.Bind(wxEVT_IDLE, [this](wxIdleEvent &event)
 			{
 				wxTheApp->ExitMainLoop();
@@ -96,11 +95,11 @@ class ConsoleBufferTest: public ::testing::Test
 		
 		void pump_events()
 		{
-			timer->Start(1000, wxTIMER_ONE_SHOT);
+			timer.Start(1000, wxTIMER_ONE_SHOT);
 			
 			wxTheApp->OnRun();
 			
-			timer->Stop();
+			timer.Stop();
 		}
 };
 
